--- a/env/argocd-app.yaml
+++ b/env/argocd-app.yaml
@@ -2,10 +2,10 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: splash
-  namespace: argo-cd
+  namespace: argocd
 spec:
   destination:
-    namespace: argo-cd
+    namespace: argocd
     server: 'https://kubernetes.default.svc'
   source:
     path: env/apps
